update oscar info

--- a/assets/config.yml
+++ b/assets/config.yml
@@ -126,11 +126,17 @@ services:
         subtitle: ""
         endpoint: "<http://your-host-o-domain>/cors/https://editor.openeo.org/?server=https%3A%2F%2Fopeneo.intertwin.fedcloud.eu%2F1.1.0%2F"
         target: "_blank"
-      - name: "OSCAR"
+      - name: "OSCAR UKRI Cluster"
         logo: "assets/oscar.png"
-        url: "https://beautiful-lederberg3.im.grycap.net/"
-        subtitle: "OSCAR Cluster Management"
-        endpoint: "<http://your-host-o-domain>/cors/https://beautiful-lederberg3.im.grycap.net/"
+        url: "https://oscar-ukri.intertwin.fedcloud.eu/"
+        subtitle: "OSCAR Cluster Management at UKRI"
+        endpoint: "<http://your-host-o-domain>/cors/https://oscar-ukri.intertwin.fedcloud.eu/"
+        target: "_blank"
+      - name: "OSCAR GRNET Cluster"
+        logo: "assets/oscar.png"
+        url: "https://oscar-grnet.intertwin.fedcloud.eu/"
+        subtitle: "OSCAR Cluster Management at GRNET"
+        endpoint: "<http://your-host-o-domain>/cors/https://oscar-grnet.intertwin.fedcloud.eu/"
         target: "_blank"
       - name: "MLFlow"
         logo: "https://mlflow.org/docs/latest/_static/MLflow-logo-final-black.png"
